Clean up projects: remove all test projects and keep only DemoProj

--- a/pages/weekly.html
+++ b/pages/weekly.html
@@ -283,21 +283,7 @@
                     <div class="day-progress">
 
                         <div class="progress-entry">
-                            <div class="progress-time">23:07</div>
-                            <div class="progress-project">Web应用开发</div>
-                            <div class="progress-description">完成了项目架构设计</div>
-                        </div>
-
-                        <div class="progress-entry">
-                            <div class="progress-time">23:07</div>
-                            <div class="progress-project">机器学习项目</div>
-                            <div class="progress-description">完成了项目初始化</div>
-                        </div>
-
-                        <div class="progress-entry">
-                            <div class="progress-time">23:07</div>
-                            <div class="progress-project">机器学习项目</div>
-                            <div class="progress-description">实现了数据预处理模块</div>
+                            <div class="progress-description">暂无进度</div>
                         </div>
 
                     </div>
