--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -148,24 +148,10 @@
         <div class="timeline">
 
             <div class="timeline-item">
-                <div class="timeline-date">2025-08-08 23:07</div>
-                <div class="timeline-project">Web应用开发 (前端项目)</div>
-                <div class="timeline-description">完成了项目架构设计</div>
-                <div class="timeline-notes">使用React + TypeScript</div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-date">2025-08-08 23:07</div>
-                <div class="timeline-project">机器学习项目 (AI研究)</div>
-                <div class="timeline-description">完成了项目初始化</div>
-                <div class="timeline-notes">搭建了基础框架</div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-date">2025-08-08 23:07</div>
-                <div class="timeline-project">机器学习项目 (AI研究)</div>
-                <div class="timeline-description">实现了数据预处理模块</div>
-                <div class="timeline-notes">支持多种数据格式</div>
+                <div class="timeline-date">2024-08-09 03:30</div>
+                <div class="timeline-project">DemoProj (演示项目)</div>
+                <div class="timeline-description">创建DemoProj项目</div>
+                <div class="timeline-notes">用于演示项目进度管理系统的各项功能</div>
             </div>
 
         </div>
